deploy/kustomize/app-manifests/service-teleport-dev.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teleport-dev
  namespace: teleport-dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: teleport-dev
  ports:
    - name: web
      port: 3080
      targetPort: web
