deploy/kustomize/app-manifests/httproute-teleport-dev-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teleport-dev-redirect
  namespace: teleport-dev
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  hostnames:
    - tp-dev.eu-central-1.myidp.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: platform-gateway
      namespace: traefik
      sectionName: web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
